--- a/index.html
+++ b/index.html
@@ -231,12 +231,20 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item item-disbaled">
+                                        <a class="dropdown-item">
                                             <span class="icon">
                                                 <img src="img/coin-chaing.svg" alt="">
                                             </span> Chainge Finance
                                         </a>
                                     </li>
+                                    <li>
+                                        <a class="dropdown-item item-disbaled">
+                                            <span class="icon">
+                                                <img src="img/bitget.svg" alt="">
+                                            </span> Bitget
+                                        </a>
+                                    </li>
+                                    
                                 </ul>
                             </div>
                         </div>
