--- a/about-props.html
+++ b/about-props.html
@@ -427,10 +427,18 @@
                                     <ul class="det-list">
                                         <li>The entire supply of tokens will be issued at the beginning of the sale process. New tokens cannot be minted and existing tokens cannot be burned. </li>
                                         <li>Value will rise as demand increases as $PROPS tokens are required to utilize the Propbase platform regardless  if accessed by a third party or other entities.</li>
+                                    </ul>
+                                </div>
+                                <div class="list-block">
+                                    <ul class="det-list">
                                         <li>As the platform grows and more users join the Propbase ecosystem, so does the value of the $PROPS token.</li>
                                         <li>Users who do not have $PROPS tokens must buy them on an exchange in order to participate in the Propbase marketplace, registry, and transaction platform.</li>
                                     </ul>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="team-sec">
+                            <div class="team-col">
                                 <div class="auth-det-block">
                                     <div class="auth-det-card">
                                         <div class="auth-img">
@@ -442,7 +450,59 @@
                                             <p>Founder & CEO</p>
                                         </div>
                                         <div class="auth-abt">
-                                            Entrepreneur and expert in technical platform development
+                                            Entrepreneur and expert in <br>technical platform development
+                                        </div>
+                                        <div class="soc-block">
+                                            <a class="auth-soc" href="#">
+                                                <img src="img/auth-linkedin.svg" alt="">
+                                            </a>
+                                            <a class="auth-soc" href="#">
+                                                <img src="img/auth-twitter.svg" alt="">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="team-col">
+                                <div class="auth-det-block">
+                                    <div class="auth-det-card">
+                                        <div class="auth-img">
+                                            <img src="img/auth-2.svg" alt="">
+                                        </div>
+                                        <div class="name-block">
+                                            <div class="name-outline">Jesse Gage</div>
+                                            <h4>Jesse Gage</h4>
+                                            <p>Executive Director</p>
+                                        </div>
+                                        <div class="auth-abt">
+                                            Expert in building online <br>marketplaces, media, and marketing
+                                        </div>
+                                        <div class="soc-block">
+                                            <a class="auth-soc" href="#">
+                                                <img src="img/auth-linkedin.svg" alt="">
+                                            </a>
+                                            <a class="auth-soc" href="#">
+                                                <img src="img/auth-twitter.svg" alt="">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="team-col">
+                                <div class="auth-det-block">
+                                    <div class="auth-det-card">
+                                        <div class="auth-img">
+                                            <img src="img/auth-3.svg" alt="">
+                                        </div>
+                                        <div class="name-block">
+                                            <div class="name-outline">Hudson Leung</div>
+                                            <h4>Hudson Leung</h4>
+                                            <p>Executive Director</p>
+                                        </div>
+                                        <div class="auth-abt">
+                                            Expert in growth strategy, web3, <br>and marketplaces
                                         </div>
                                         <div class="soc-block">
                                             <a class="auth-soc" href="#">
