Team section updations

--- a/about-props.html
+++ b/about-props.html
@@ -437,7 +437,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="team-sec">
+                        <div class="team-sec floating-icon-left">
                             <div class="team-col">
                                 <div class="auth-det-block">
                                     <div class="auth-det-card">
