--- a/home.html
+++ b/home.html
@@ -379,25 +379,25 @@
                                     <div class="banner-card-wapper">
                                         <div class="banner-col">
                                             <div class="banner-num-card">
-                                                <p>Market Cap</p>
+                                                <p><img src="img/info-qstn-mark.svg" alt=""> Market Cap</p>
                                                 <h4>$28,651,568</h4>
                                             </div>
                                         </div>
                                         <div class="banner-col">
                                             <div class="banner-num-card">
-                                                <p>24 Hour Trading</p>
+                                                <p><img src="img/info-qstn-mark.svg" alt=""> 24 Hour Trading</p>
                                                 <h4>$49,861,578</h4>
                                             </div>
                                         </div>
                                         <div class="banner-col">
                                             <div class="banner-num-card">
-                                                <p>Fully Diluted Valuation</p>
+                                                <p><img src="img/info-qstn-mark.svg" alt=""> Circulating Supply</p>
                                                 <h4>$49,861,578</h4>
                                             </div>
                                         </div>
                                         <div class="banner-col">
                                             <div class="banner-num-card">
-                                                <p>Circulating Supply</p>
+                                                <p><img src="img/info-qstn-mark.svg" alt=""> Total On-Chain Holders</p>
                                                 <h4>$49,861,578</h4>
                                             </div>
                                         </div>
