--- a/about-props.html
+++ b/about-props.html
@@ -604,8 +604,8 @@
                                     <h4 class="col-title">Token Distribution</h4>
 
                                     <div class="img-wrp">
-                                        <img class="chart-light" src="img/chart.svg" alt="token graph">
-                                        <img class="chart-dark" src="img/chart-dark.svg" alt="token graph">
+                                        <img class="chart-light" src="img/pie-chart.svg" alt="token graph">
+                                        <img class="chart-dark" src="img/pie-chart-dark.svg" alt="token graph">
                                     </div>
                                 </div>
 
