--- a/potfolio - white.html
+++ b/potfolio - white.html
@@ -527,8 +527,8 @@
                                 </div>
                                 <div class="content-block">
                                     <div class="tokenomics-graph-block">
-                                        <img class="img-light" src="img/chart-stake-light.svg" alt="">
-                                        <img class="img-dark" src="img/chart-stake-dark.svg" alt="">
+                                        <img class="img-light" src="img/pie-chart.svg" alt="">
+                                        <img class="img-dark" src="img/pie-chart-dark.svg" alt="">
                                     </div>
                                 </div>
                             </div>
