Staking card info

--- a/staking.html
+++ b/staking.html
@@ -353,34 +353,34 @@
                                             </div>
                                             <div class="table-block-cover">
                                                 <div class="table-card card-br-b">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Lock-In Ends</p>
                                                     <h5 class="tab-val">01 Aug 24</h5>
                                                 </div>
                                                 <div class="table-card card-br-b">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Total Value Staked</p>
                                                     <h5 class="tab-val">$23,456</h5>
                                                 </div>
                                                 <div class="table-card">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Total $PROPS Staked</p>
                                                     <h5 class="tab-val">128</h5>
                                                 </div>
                                                 <div class="table-card">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Early Withdrawal Fee</p>
                                                     <h5 class="tab-val">5%</h5>
                                                 </div>
                                             </div>
                                             <div class="table-block-cover">
                                                 <div class="table-card">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Your $PROPS Staked</p>
                                                     <h5 class="tab-val">01 Aug 24</h5>
                                                 </div>
                                                 <div class="table-card expected-reward">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Expected Rewards</p>
                                                     <h5 class="tab-val">25</h5>
                                                 </div>
@@ -499,34 +499,34 @@
                                             </div>
                                             <div class="table-block-cover">
                                                 <div class="table-card card-br-b">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Lock-In Ends</p>
                                                     <h5 class="tab-val">01 Aug 24</h5>
                                                 </div>
                                                 <div class="table-card card-br-b">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Total Value Staked</p>
                                                     <h5 class="tab-val">$23,456</h5>
                                                 </div>
                                                 <div class="table-card">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Total $PROPS Staked</p>
                                                     <h5 class="tab-val">128</h5>
                                                 </div>
                                                 <div class="table-card">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Early Withdrawal Fee</p>
                                                     <h5 class="tab-val">5%</h5>
                                                 </div>
                                             </div>
                                             <div class="table-block-cover">
                                                 <div class="table-card">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Your $PROPS Staked</p>
                                                     <h5 class="tab-val">01 Aug 24</h5>
                                                 </div>
                                                 <div class="table-card expected-reward">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Expected Rewards</p>
                                                     <h5 class="tab-val">25</h5>
                                                 </div>
@@ -642,34 +642,34 @@
                                             </div>
                                             <div class="table-block-cover">
                                                 <div class="table-card card-br-b">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Lock-In Ends</p>
                                                     <h5 class="tab-val">01 Aug 24</h5>
                                                 </div>
                                                 <div class="table-card card-br-b">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Total Value Staked</p>
                                                     <h5 class="tab-val">$23,456</h5>
                                                 </div>
                                                 <div class="table-card">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Total $PROPS Staked</p>
                                                     <h5 class="tab-val">128</h5>
                                                 </div>
                                                 <div class="table-card">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Early Withdrawal Fee</p>
                                                     <h5 class="tab-val">5%</h5>
                                                 </div>
                                             </div>
                                             <div class="table-block-cover">
                                                 <div class="table-card">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Your $PROPS Staked</p>
                                                     <h5 class="tab-val">01 Aug 24</h5>
                                                 </div>
                                                 <div class="table-card expected-reward">
-                                                    <span class="info">i</span>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Expected Rewards</p>
                                                     <h5 class="tab-val">25</h5>
                                                 </div>
