--- a/staking.html
+++ b/staking.html
@@ -232,8 +232,9 @@
                 <div class="card-sec card-section-outer">
                     <div class="filter-wrapper d-flex">
                         <div class="block-left">
-                            <div class="filter-nav-btn-wrapper d-flex">
-                                <button class="filter-nav-btn active">All</button>
+                            <div class="filter-nav-btn-wrapper filter-nav-scroll custom-scroll d-flex">
+                                <!-- <button class="filter-nav-btn active">All</button> -->
+                                <button class="filter-nav-btn active">Promotional staking pools</button>
                                 <button class="filter-nav-btn">Upcoming</button>
                                 <button class="filter-nav-btn">Active</button>
                                 <button class="filter-nav-btn">Done</button>
