Coming soon card

--- a/staking.html
+++ b/staking.html
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                 <div class="staking-dashboard-outer col-12">
-                    <div class="welcome-stake-outer">
+                    <!-- <div class="welcome-stake-outer">
                         <div class="img-sec-stake">
                             <img src="img/staking-img.svg" alt="">
                         </div>
@@ -195,7 +195,28 @@
                                </p>
                             </div>
                         </div>
+                    </div> -->
+                    <div class="welcome-stake-outer-new">
+                        <span class="logo-bg">
+                            <img src="img/logo-bg-xl.svg" alt="">
+                        </span>
+                        <span class="certic-block">
+                            Certik Audited
+                            <img src="img/certik-icon.svg" alt="">
+                        </span>
+                        <div class="content-block">
+                            <div class="logo-block">
+                                <img src="img/soon-logo.svg" alt="">
+                            </div>
+                            <h2>Mega PROPS Staking Pool</h2>
+                            <h3>
+                                <img src="img/coming-soon-timer.svg" alt="">
+                                Coming soon
+                            </h3>
+                            <p>Designed for large PROPS holders with longer term staking, large individual allocation, & attractive APY</p>
+                        </div>
                     </div>
+                    
                     <div class="total-value-outer">
                         <div class="stake-tot-locked">
                             <h3>
@@ -203,8 +224,8 @@
                                     <img src="img/grph-img.svg" class="img-lock-white">
                                 </span>
                                 <span class="txt-sec">
-                                    <!-- Percentage of 
-                                    <br/> -->
+                                    Percentage of 
+                                    <br/>
                                     Circulating supply
                                 </span>
                             </h3>
