Coming soon card title

--- a/staking.html
+++ b/staking.html
@@ -251,11 +251,11 @@
                     </div>
                 </div>             
                 <div class="card-sec card-section-outer">
+                    <h4 class="pool-title">Promotional staking pools</h4>
                     <div class="filter-wrapper d-flex">
                         <div class="block-left">
                             <div class="filter-nav-btn-wrapper filter-nav-scroll custom-scroll d-flex">
-                                <!-- <button class="filter-nav-btn active">All</button> -->
-                                <button class="filter-nav-btn active">Promotional staking pools</button>
+                                <button class="filter-nav-btn active">All</button>
                                 <button class="filter-nav-btn">Upcoming</button>
                                 <button class="filter-nav-btn">Active</button>
                                 <button class="filter-nav-btn">Done</button>
