--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <!-- right sec -->
         <div class="content-block-outer">
             <!-- Header -->
-            <div class="header-wrapper shadow-bg">
+            <div class="header-wrapper shadow-bg sticky-lg-top">
                 <div class="header-title-block">
                     <!-- <div class="live-active wallet-btn">
                         <span class="status"></span> <span class="label-web">Live on</span> APTOS mainnet
