--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="navbar-collapse-block">
+                <div class="navbar-collapse-block custom-scroll">
                     <ul class="navbar-ul">
                         <li class="nav-item">
                             <a class="nav-link active" href="#">
@@ -50,6 +50,24 @@
                                     <img src="img/nav-home.svg" alt="">
                                 </span>
                                 <span class="nav-label">Home</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <img src="img/nav-briefcase.svg" alt="">
+                                <span class="nav-label">Portfolio</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <img src="img/nav-briefcase.svg" alt="">
+                                <span class="nav-label">Portfolio</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <img src="img/nav-briefcase.svg" alt="">
+                                <span class="nav-label">Portfolio</span>
                             </a>
                         </li>
                         <li class="nav-item">
