staking card img size

--- a/staking.html
+++ b/staking.html
@@ -277,7 +277,7 @@
                                     <div class="staking-card-block">
                                         <div class="card-top-sec">
                                             <div class="card-banner-block">
-                                                <img class="bnr-img-sm" src="img/coin-stk-bnr.png" alt="">
+                                                <img class="bnr-img-sm" src="img/banner-serv.png" alt="">
                                                 <div class="logo-block">
                                                     <span class="coin-logo">
                                                         <img class="img-coin" src="img/stk-bnr-coin.svg" alt="">
