staking rem update

--- a/Rewards-Vesting.html
+++ b/Rewards-Vesting.html
@@ -497,7 +497,7 @@
     </div>
     
     <!-- confirmation modal -->
-    <div class="modal fade custom-modal success-modal vesting-confirm" id="confirmationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade custom-modal success-modal vesting-confirm show" style="display: block;" id="confirmationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
