--- a/staking.html
+++ b/staking.html
@@ -348,11 +348,20 @@
                                                 <div class="progress-col progress-col-left">
                                                     <div class="progress-bar-block">
                                                         <div class="text-block">
-                                                            <div class="progress-label">
-                                                                Pool Cap :
+                                                            <div class="text-block-inner">
+                                                                <div class="progress-label">
+                                                                    Pool Cap :
+                                                                </div>
+                                                                <h5>20,000,000 
+                                                                    <span>$PROPS</span></h5>
                                                             </div>
-                                                            <h5>20,000,000 
-                                                                <span>$PROPS</span></h5>
+                                                            <div class="text-block-inner">
+                                                                <div class="progress-label">
+                                                                    Remaining :
+                                                                </div>
+                                                                <h5>20,000,000 
+                                                                    <span>$PROPS</span></h5>
+                                                            </div>
                                                         </div>
                                                         <div class="progress-block">
                                                             <!-- progress bar goes here -->
@@ -1575,6 +1584,9 @@
                     </div>
                     <div class="pool-cap-txt">
                         <span class="pool-label">Pool Cap: </span><span class="pool-cont">20,000,000 $PROPS</span>
+                        <div class="rem-pool-label">
+                            <span class="pool-label">Remaining: </span><span class="pool-cont">20,000,000 $PROPS</span>
+                        </div>
                     </div>
                     <div class="progress-bar-section">
                         <div class="progress-bar-block">
