--- a/create-stake.html
+++ b/create-stake.html
@@ -760,7 +760,7 @@
     </div>
 
     <!-- Alocating success modal -->
-    <div class="modal fade custom-modal success-modal" id="successModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade custom-modal success-modal show" style="display: block;" id="successModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
