--- a/staking.html
+++ b/staking.html
@@ -1585,7 +1585,7 @@
                     <div class="pool-cap-txt">
                         <span class="pool-label">Pool Cap: </span><span class="pool-cont">20,000,000 $PROPS</span>
                         <div class="rem-pool-label">
-                            <span class="pool-label">Remaining: </span><span class="pool-cont">20,000,000 $PROPS</span>
+                            <span class="pool-label">Remaining Pool Cap: </span><span class="pool-cont">$PROPS 20,000,000</span>
                         </div>
                     </div>
                     <div class="progress-bar-section">
